# img_to_swipes

./: .gitignore  README.md  android-select-device  config.toml  culebra_tester.sh  img_to_swipes.cmd  img_to_swipes.py  img_to_swipes.sh  pyproject.toml  requirements.txt
culebra_tester/: instrumentation.apk
img_to_swipes/: __main__.py  cli.py  config.py  geometry.py  image.py  nodejs_utils.py  swiper.py
img_to_swipes/target_platforms/android/: target_platform.py
platform_tools/darwin/android/: hprof-conv  make_f2fs
platform_tools/darwin/nodejs/: npm.sh
platform_tools/linux/android/: etc1tool  make_f2fs  make_f2fs_casefold  sqlite3
platform_tools/linux/nodejs/: npm.sh
platform_tools/windows/nodejs/: npm.cmd
src/: config.py  geometry.py  image.py  log.py  main.py  nodejs_utils.py  swiper.py
src/target_platforms/: target_platform.py
src/target_platforms/android/: target_platform.py
src/target_platforms/android/platform_tools/darwin/: NOTICE.txt  etc1tool  make_f2fs_casefold  mke2fs
src/target_platforms/android/platform_tools/darwin/lib64/: libc++.dylib
src/target_platforms/android/platform_tools/linux/: NOTICE.txt  fastboot  hprof-conv  mke2fs
